bdr.BDR.scala.error
Compilation error:
BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="L")left()
       ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="I"){
       ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="A")forward();
       ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="B"){forward();forward();}
       ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="C"){forward();forward();forward()}
       ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="Z")backward();
       ^BDR:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="Y"){backward();backward();}
       ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
  if (m="X"){backward();backward();backward();}
       ^